# boto

./: .gitmodules  CMakeLists.txt  conanfile.txt
src/: main.cpp
src/Core/: Application.cpp  Application.h  Event.cpp  Event.h  Layer.h  Observer.h  Subject.h
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/ImGui/widgets/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ImGuiWidget.h  MainMenuBar.cpp  MainMenuBar.h  NodeEditorPanel.cpp  NodeEditorPanel.h
src/ImGui/widgets/Nodes/: Draw.cpp  Draw.h  PinIcon.cpp  PinIcon.h
src/ImGui/widgets/nodes/: NodeGui.h  PinIcon.h
src/Project/: FLow.cpp  FLow.h  Flow.cpp  Flow.h  Node.cpp  Node.h  Solution.cpp  Solution.h
src/Utils/: IdGenerator.cpp  IdGenerator.h
